tests/tooling/fixtures/native/execution/positive/message_send_nil_bound_identifier_mixed_flow.objc3
// Positive execution fixture: mixed immutable/mutable nil-bound receiver sends remain deterministic.
module MessageSendNilBoundIdentifierMixedFlowExecution;

fn main() {
  let stable = nil;
  let mutable = 1;
  mutable = nil;
  let stable_sent = [stable ping];
  let mutable_sent = [mutable pong];
  return stable_sent + mutable_sent + 14;
}
