tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_message_receiver_extern.objc3
module MisplacedQualifierMessageReceiverExtern;

fn main() -> i32 {
  return [extern ping];
}